# LLM-software-design

./: README.md  pyproject.toml
architecture_planning/: README.md  long_prompt.txt  main.py  prompt.txt
code_review/: constants.py  main.py  prompt.txt
