[project]
name = "llm-software-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.61.0",
]

[tool.uv.workspace]
members = ["personal_projects/LLM-software-design"]

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]
